[package]
name = "clap-help"
version = "1.1.0"
edition = "2021"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/clap-help"
description = "utility printing help of a clap application"
keywords = ["terminal"]
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"
rust-version = "1.65"

[features]
default = []

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
termimad = "0.28"
terminal-light = "1.2"

[patch.crates-io]
# termimad = { path = "../termimad" }
# crokey = { path = "../crokey" }
